--- a/app/src/main/res/menu/menu_opciones.xml
+++ b/app/src/main/res/menu/menu_opciones.xml
@@ -4,4 +4,7 @@
     <item android:id="@+id/optNuevoReclamo" android:title="Nuevo Reclamo"></item>
     <item android:id="@+id/optVerMapa" android:title="Ver en Mapa"></item>
     <item android:id="@+id/optHeatMap" android:title="HeatMap"></item>
+    <item
+        android:id="@+id/optFormularioBusqueda"
+        android:title="Formulario de busqueda"></item>
 </menu>
