Lab 06 req 01 realizado

--- a/app/src/main/res/layout/fragment_nuevo_reclamo.xml
+++ b/app/src/main/res/layout/fragment_nuevo_reclamo.xml
@@ -48,6 +48,18 @@
         android:id="@+id/reclamo_tipo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"></Spinner>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Foto" />
+
+    <ImageView
+        android:id="@+id/imgFoto"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:src="@android:drawable/ic_menu_camera" />
+
     <Button
         android:id="@+id/btnGuardar"
         android:text="Guardar"
